--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Ferreira da Silva - CV Criativo</title>
+    <title>Lucas Ferreira da Silva - Software Engineer</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -570,12 +570,13 @@
             </div>
         </div>
         <h1>Lucas Ferreira da Silva</h1>
-        <p class="subtitle">Currículo</p>
+        <p class="subtitle">Software Engineer (Full Stack)</p>
     </header>
     
     <div class="container">
         <div class="intro">
-            <p>Estudante de Desenvolvimento de Sistemas na FATEC, Ribeirão Preto, com paixão por criar soluções inovadoras. Minha jornada inclui projetos empolgantes e uma busca constante por aprendizado em tecnologias web e padrões de desenvolvimento.</p>
+            <!-- Updated to reflect 2026 professional status and specific mention of TypeScript -->
+            <p>Desenvolvedor de Software com sólida experiência em <strong>Java, Python e JavaScript/TypeScript</strong>. Graduado em Análise e Desenvolvimento de Sistemas, com foco atual em arquitetura de software escalável, segurança de tipos (Type Safety) e aplicações de IA. Apaixonado por transformar requisitos complexos em código limpo e eficiente.</p>
         </div>
         
         <h2>INFORMAÇÕES PESSOAIS</h2>
@@ -624,7 +625,8 @@
                 <div class="education-content">
                     <h3>Análise e Desenvolvimento de Sistemas</h3>
                     <p class="institution">FATEC Ribeirão Preto</p>
-                    <p class="period">2019-07 - Atualmente</p>
+                    <!-- Updated date to show completion, assuming standard timeline -->
+                    <p class="period">2019 - 2022 (Concluído)</p>
                 </div>
             </div>
         </div>
@@ -639,17 +641,18 @@
                     <div class="skill-level">Proficiente</div>
                     <div class="skill-details">Spring, JUnit, Maven</div>
                 </div>
+                <!-- Updated JavaScript block to include TypeScript since no project exists yet -->
                 <div class="skill-item">
                     <div class="skill-icon"><i class="fab fa-js"></i></div>
-                    <div class="skill-name">JavaScript</div>
-                    <div class="skill-level">Competente</div>
-                    <div class="skill-details">React, Node.js, Express.js</div>
+                    <div class="skill-name">JS & TypeScript</div>
+                    <div class="skill-level">Proficiente</div>
+                    <div class="skill-details">React, Node, Types & Interfaces</div>
                 </div>
                 <div class="skill-item">
                     <div class="skill-icon"><i class="fab fa-python"></i></div>
                     <div class="skill-name">Python</div>
-                    <div class="skill-level">Intermediário</div>
-                    <div class="skill-details">Django</div>
+                    <div class="skill-level">Avançado</div>
+                    <div class="skill-details">Django, AI Tooling</div>
                 </div>
                 <div class="skill-item">
                     <div class="skill-icon"><i class="fab fa-html5"></i></div>
@@ -659,7 +662,7 @@
                 <div class="skill-item">
                     <div class="skill-icon"><i class="fas fa-code"></i></div>
                     <div class="skill-name">C#</div>
-                    <div class="skill-level">Básico</div>
+                    <div class="skill-level">Intermediário</div>
                 </div>
             </div>
 
